fix(YALB-1527): update component to remove component spacing

--- a/components/02-molecules/link-skip/_yds-link-skip.scss
+++ b/components/02-molecules/link-skip/_yds-link-skip.scss
@@ -1,13 +1,14 @@
 @use '../../00-tokens/tokens';
 @use '../../01-atoms/controls/text-link/yds-text-link' as link;
 
-.link-skip {
+.link-skip__link {
   @include link.plain-link;
 
   --color-text-shadow: var(--color-basic-white);
 
   margin-block-start: var(--size-spacing-4);
   margin-block-end: var(--size-spacing-4);
+  padding-inline-start: 0;
 
   &.visually-hidden.focusable:focus {
     display: block;
